@@ -1,3 +1,12 @@
+2011-07-08  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandoradb_data.sql,
+	  include/functions_config.php,
+	  pandoradb.data.postgreSQL.sql,
+	  pandoradb.data.oracle.sql,
+	  godmode/setup/performance.php: Added support for unknown module
+	  deletion.
+
 2011-07-08  Sergio Martin <sergio.martin@artica.es>
 
 	* pandoradb.sql
@@ -104,7 +113,6 @@
 	pandoradb.data.oracle.sql: Default skin applied to all groups 
 	by default.
 
->>>>>>> .r4523
 2011-07-06 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/styles/pandora.css
